--- a/assets/css/home_style.css
+++ b/assets/css/home_style.css
@@ -1,6 +1,4 @@
-/*--------------------------------------------------------------
-# Hero Section
---------------------------------------------------------------*/
+/*-------------------------- HEADER --------------------------*/
 #home {
   position: relative;
   width: 100%;
@@ -49,6 +47,7 @@
   font-size: 36px;
   font-weight: 580;
   text-shadow: 0 8px 28px rgba(0, 0, 0, 1);
+  text-align: center;
 }
 
 #home h3 {
@@ -196,11 +195,6 @@
   #home .home-img img {
     width: 70%;
   }
-
-    .flipper{
-      width: 510px;
-      height: 380px;
-    }
 }
 
 @media (max-width: 575px) {
@@ -220,3 +214,166 @@
     width: 60%;
   }
 }
+
+/*-------------------------- ABOUT --------------------------*/
+
+#about .container {
+  max-width: 1500px;
+}
+
+#about h2 {
+  color: rgb(273, 179, 119);
+  font-family: 'Palanquin Dark', sans-serif;
+  font-size: 40px;
+}
+
+#about h3 {
+  color: rgb(273, 179, 119);
+  font-family: 'Palanquin Dark', sans-serif;
+  font-size: 30px;
+  padding-bottom: 0.8%;
+}
+
+#about h4 {
+  font-size: 22px;
+}
+
+#about p {
+  margin-top: 2%;
+  font-size: 18px;
+  text-align: justify;
+}
+
+.about-container {
+  margin-top: 4%;
+  margin-bottom: 2%;
+  padding-left: 3%;
+  padding-right: 3%;
+  border-left: 1px solid rgb(48, 86, 175);
+}
+
+#about a {
+  color: rgb(48, 86, 175);
+}
+
+#about a:hover {
+  color: rgb(273, 179, 119);
+  transition: 0.6s;
+}
+
+@media (max-width: 1900px) {
+  #about .container {
+    width: 90%;
+  }
+}
+
+@media (max-width: 1600px) {
+  #about .container {
+    width: 80%;
+  }
+}
+
+@media (max-width: 991px) {
+  #about .container {
+   width: 80%;
+  }
+}
+
+/*-------------------------- INFOS --------------------------*/
+
+#infos .container {
+  margin-top: 5%;
+  max-width: 1500px;
+  align-content: center;
+  text-align: center;
+}
+
+#infos h2 {
+  color: rgb(273, 179, 119);
+  font-family: 'Palanquin Dark', sans-serif;
+  font-size: 40px;
+  margin-bottom: 4%;
+}
+
+#infos h3 {
+  color: rgb(273, 179, 119);
+  font-family: 'Palanquin Dark', sans-serif;
+  font-size: 30px;
+}
+
+#infos h4 {
+  font-size: 22px;
+}
+
+#infos p {
+  margin-top: 2%;
+  font-size: 18px;
+  text-align: justify;
+}
+
+#important-dates,
+#twitter {
+  width: 50%;
+  box-sizing: border-box;
+  padding: 10px;
+}
+
+@media (max-width: 900px) {
+  #infos .container {
+    flex-direction: column;
+  }
+
+  #important-dates,
+  #twitter {
+    width: 100%;
+  }
+}
+
+#date-list {
+  display: flex;
+  flex-direction: column;
+  padding-left: 30%;
+}
+
+.date {
+  padding: 0 0 26px 20px;
+  margin-top: 0;
+  position: relative;
+  text-align: left;
+  border-left: 2px solid rgb(3, 3, 3);
+}
+.date .next-date{
+  border-left: 2px solid rgb(48, 86, 175);
+}
+
+#infos h3 {
+  color: rgb(48, 86, 175);
+  font-size: 26px;
+}
+
+#infos p {
+  margin-top: 0;
+  font-size: 18px;
+}
+
+#infos .next-date p {
+  font-weight: 600;
+}
+
+.date::before {
+  content: "";
+  position: absolute;
+  width: 16px;
+  height: 16px;
+  border-radius: 50px;
+  left: -9px;
+  top: 0;
+  background: white;
+  border: 3px solid rgb(48, 86, 175);
+}
+
+.next-date::before {
+  background: rgb(48, 86, 175);
+}
+
+
