--- a/assets/css/committee_style.css
+++ b/assets/css/committee_style.css
@@ -12,7 +12,7 @@
   }
   
 #committee .container {
-    max-width: 1800px;
+    max-width: 150%;
 }
   
 #committee h2 {
@@ -107,7 +107,7 @@
   .member-info h5 {
     font-weight: 200;
     margin-bottom: 5px;
-    font-size: 24px;
+    font-size: 23px;
     color: #f3f4f6;
     background-color: rgb(9, 18, 60);
     padding: 6px 6px;
