--- a/assets/css/home_style.css
+++ b/assets/css/home_style.css
@@ -376,4 +376,102 @@
   background: rgb(48, 86, 175);
 }
 
+/*-------------------------- SUPPORTING PROJECTS --------------------------*/
+
+#supporting_projects .container {
+  max-width: 1500px;
+  background-color: #f3f4f6;
+}
+
+#supporting_projects h2 {
+  color: rgb(273, 179, 119);
+  font-family: 'Palanquin Dark', sans-serif;
+  font-size: 40px;
+  padding: 1% 1%;
+}
+
+#supporting_projects h3 {
+  color: rgb(273, 179, 119);
+  font-family: 'Palanquin Dark', sans-serif;
+  font-size: 30px;
+  padding-bottom: 0.8%;
+}
+
+#supporting_projects h4 {
+  font-size: 22px;
+  padding-bottom: 2%;
+}
+
+#supporting_projects p {
+  font-size: 18px;
+  text-align: justify;
+}
+
+.supporting-container {
+  margin-top: 2%;
+  margin-bottom: 2%;
+  padding-left: 3%;
+  padding-right: 3%;
+}
+
+#supporting_projects a {
+  color: rgb(48, 86, 175);
+}
+
+#supporting_projects a:hover {
+  color: rgb(273, 179, 119);
+  transition: 0.6s;
+}
+
+#supporting_projects img {
+  height: 100%;
+  width: 100%;
+}
+
+#supporting_projects .social_container {
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#supporting_projects .social_container a {
+    margin: 1% 3%;
+    border-radius: 50%;
+    padding: 8px 16px;
+    display: inline-block;
+    color: rgb(48, 86, 175);
+    background-color: white;
+    border: none;
+    text-align: center;
+}
+
+#supporting_projects .social_container i:hover {
+  color: rgb(273, 179, 119);
+  transition: 0.3s;
+}
+
+#supporting_projects .social_container i {
+    font-size: 30px;
+    color: rgb(48, 86, 175);
+}
+
+@media (max-width: 900px) {
+    #supporting_projects .container {
+        flex-direction: column;
+    }
+
+    #supporting_projects img {
+      height: 60%;
+      width: 60%;
+    }
+
+    #img_container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+}
+
+
+
 
