--- a/assets/css/home_style.css
+++ b/assets/css/home_style.css
@@ -388,6 +388,7 @@
   font-family: 'Palanquin Dark', sans-serif;
   font-size: 40px;
   padding: 1% 1%;
+  margin-bottom: 3%;
 }
 
 #supporting_projects h3 {
@@ -424,8 +425,7 @@
 }
 
 #supporting_projects img {
-  height: 100%;
-  width: 100%;
+  height: 260px;
 }
 
 #supporting_projects .social_container {
@@ -455,21 +455,44 @@
     color: rgb(48, 86, 175);
 }
 
-@media (max-width: 900px) {
+.img_container {
+  display: flex;
+  justify-content: center; /* Centra orizzontalmente i contenuti */
+  align-items: center; /* Centra verticalmente i contenuti, se vuoi */
+  flex-direction: column;
+}
+
+.supporting-info {
+  width: 70%;
+}
+
+.supporting-img {
+  width: 30%;
+}
+
+@media (max-width: 1000px) {
     #supporting_projects .container {
         flex-direction: column;
     }
 
     #supporting_projects img {
-      height: 60%;
-      width: 60%;
+      height: 50%;
+      width: 50%;
     }
 
-    #img_container {
+    .img_container {
         display: flex;
         justify-content: center;
         align-items: center;
     }
+
+  .supporting-info {
+    width: 100%;
+  }
+
+  .supporting-img {
+    width: 100%;
+  }
 }
 
 
